{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 773,
  "lineage": "5807dd6f-de03-65d0-b856-a74f833c8601",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-NAT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a727f906f0f1661",
            "domain": "vpc",
            "id": "eipalloc-03a727f906f0f1661",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-52-57-125-96.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.57.125.96",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.InternetGateway",
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-NAT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd838b301a4200f5",
            "domain": "vpc",
            "id": "eipalloc-0cd838b301a4200f5",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-195-151-167.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.195.151.167",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.InternetGateway",
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05b308c240ae70bb6",
            "arn": "arn:aws:ec2:eu-central-1:626205521754:instance/i-0540d028dbea3014e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0540d028dbea3014e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Wordpress",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00fb18e03e3ed1ac7",
            "private_dns": "ip-10-0-200-122.eu-central-1.compute.internal",
            "private_ip": "10.0.200.122",
            "public_ip": "3.68.213.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bafeb0255b24bde2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0315a2896974323e2",
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01d743e72a9259070"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion-host",
            "aws_subnet.public-subnet-az1",
            "aws_vpc.wordpress",
            "data.aws_ami.ubuntu",
            "data.aws_key_pair.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Wordpress_Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05b308c240ae70bb6",
            "arn": "arn:aws:ec2:eu-central-1:626205521754:instance/i-0e166b913b48e6160",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform-20220207200052198300000001",
            "id": "i-0e166b913b48e6160",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Wordpress",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02c8944eb50e9d267",
            "private_dns": "ip-10-0-3-105.eu-central-1.compute.internal",
            "private_ip": "10.0.3.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0de6b1f3cd2e16d09",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c0eacb44b4401d1e",
            "tags": {
              "Name": "Wordpress_Instance"
            },
            "tags_all": {
              "Name": "Wordpress_Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bd9c4f7b1e7666ea"
            ]
          },
          "dependencies": [
            "aws_eip.eip-NAT1",
            "aws_eip.eip-NAT2",
            "aws_iam_instance_profile.wordpress_instance_profile",
            "aws_iam_role.ec2_role",
            "aws_internet_gateway.InternetGateway",
            "aws_nat_gateway.Nat-Az1",
            "aws_nat_gateway.Nat-Az2",
            "aws_network_acl.nacl",
            "aws_route_table.wp_priv_route_table1",
            "aws_route_table.wp_priv_route_table2",
            "aws_route_table_association.c",
            "aws_route_table_association.d",
            "aws_security_group.bastion-guest",
            "aws_security_group.bastion-host",
            "aws_security_group.lb_sg",
            "aws_subnet.app-subnet-az1",
            "aws_subnet.app-subnet-az2",
            "aws_subnet.public-subnet-az1",
            "aws_subnet.public-subnet-az2",
            "aws_vpc.wordpress",
            "data.aws_ami.ubuntu",
            "data.aws_key_pair.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "InternetGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:626205521754:internet-gateway/igw-0f949ab75e0e63d4f",
            "id": "igw-0f949ab75e0e63d4f",
            "owner_id": "626205521754",
            "tags": {
              "Name": "wordpressInternetGateway"
            },
            "tags_all": {
              "Name": "wordpressInternetGateway"
            },
            "vpc_id": "vpc-07f426f9f0ee673ad"
          },
          "dependencies": [
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "wordpress_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:626205521754:loadbalancer/app/wordpress-load-balancer/6ac6a01cd42787f4",
            "arn_suffix": "app/wordpress-load-balancer/6ac6a01cd42787f4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "wordpress-load-balancer-2059682998.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:626205521754:loadbalancer/app/wordpress-load-balancer/6ac6a01cd42787f4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpress-load-balancer",
            "security_groups": [
              "sg-04aa93a555e4c025b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a3da0f6544a9cb8"
              },
              {
                "subnet_id": "subnet-0315a2896974323e2"
              }
            ],
            "subnets": [
              "subnet-02a3da0f6544a9cb8",
              "subnet-0315a2896974323e2"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-07f426f9f0ee673ad",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_ami_from_instance.ami_wordpress",
            "aws_autoscaling_group.wordpress_asg",
            "aws_eip.eip-NAT1",
            "aws_eip.eip-NAT2",
            "aws_iam_instance_profile.wordpress_instance_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.Wordpress_Instance",
            "aws_internet_gateway.InternetGateway",
            "aws_launch_configuration.wordpress_config",
            "aws_lb_target_group.wp-target-group",
            "aws_nat_gateway.Nat-Az1",
            "aws_nat_gateway.Nat-Az2",
            "aws_network_acl.nacl",
            "aws_route_table.wp_priv_route_table1",
            "aws_route_table.wp_priv_route_table2",
            "aws_route_table_association.c",
            "aws_route_table_association.d",
            "aws_security_group.bastion-guest",
            "aws_security_group.bastion-host",
            "aws_security_group.lb_sg",
            "aws_subnet.app-subnet-az1",
            "aws_subnet.app-subnet-az2",
            "aws_subnet.public-subnet-az1",
            "aws_subnet.public-subnet-az2",
            "aws_vpc.wordpress",
            "data.aws_ami.ubuntu",
            "data.aws_key_pair.key_pair",
            "time_sleep.wait_300_seconds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:626205521754:listener/app/wordpress-load-balancer/6ac6a01cd42787f4/4858f15ed08e2cec",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:626205521754:targetgroup/wp-target-group/7fa4a05aac616f1a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:626205521754:listener/app/wordpress-load-balancer/6ac6a01cd42787f4/4858f15ed08e2cec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:626205521754:loadbalancer/app/wordpress-load-balancer/6ac6a01cd42787f4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ami_from_instance.ami_wordpress",
            "aws_autoscaling_group.wordpress_asg",
            "aws_eip.eip-NAT1",
            "aws_eip.eip-NAT2",
            "aws_iam_instance_profile.wordpress_instance_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.Wordpress_Instance",
            "aws_internet_gateway.InternetGateway",
            "aws_launch_configuration.wordpress_config",
            "aws_lb.wordpress_load_balancer",
            "aws_lb_target_group.wp-target-group",
            "aws_nat_gateway.Nat-Az1",
            "aws_nat_gateway.Nat-Az2",
            "aws_network_acl.nacl",
            "aws_route_table.wp_priv_route_table1",
            "aws_route_table.wp_priv_route_table2",
            "aws_route_table_association.c",
            "aws_route_table_association.d",
            "aws_security_group.bastion-guest",
            "aws_security_group.bastion-host",
            "aws_security_group.lb_sg",
            "aws_subnet.app-subnet-az1",
            "aws_subnet.app-subnet-az2",
            "aws_subnet.public-subnet-az1",
            "aws_subnet.public-subnet-az2",
            "aws_vpc.wordpress",
            "data.aws_ami.ubuntu",
            "data.aws_key_pair.key_pair",
            "time_sleep.wait_300_seconds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wp-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:626205521754:targetgroup/wp-target-group/7fa4a05aac616f1a",
            "arn_suffix": "targetgroup/wp-target-group/7fa4a05aac616f1a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:626205521754:targetgroup/wp-target-group/7fa4a05aac616f1a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wp-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07f426f9f0ee673ad"
          },
          "dependencies": [
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Nat-Az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a727f906f0f1661",
            "connectivity_type": "public",
            "id": "nat-0f20e576ea2a5312b",
            "network_interface_id": "eni-0ad9208810ca76b04",
            "private_ip": "10.0.200.179",
            "public_ip": "52.57.125.96",
            "subnet_id": "subnet-0315a2896974323e2",
            "tags": {
              "Name": "Wordpress-Nat-Az1"
            },
            "tags_all": {
              "Name": "Wordpress-Nat-Az1"
            }
          },
          "dependencies": [
            "aws_eip.eip-NAT1",
            "aws_internet_gateway.InternetGateway",
            "aws_subnet.public-subnet-az1",
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Nat-Az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd838b301a4200f5",
            "connectivity_type": "public",
            "id": "nat-019fc79ad06f5a74b",
            "network_interface_id": "eni-0796ee890c91965f1",
            "private_ip": "10.0.201.245",
            "public_ip": "18.195.151.167",
            "subnet_id": "subnet-02a3da0f6544a9cb8",
            "tags": {
              "Name": "Wordpress-Nat-Az2"
            },
            "tags_all": {
              "Name": "Wordpress-Nat-Az2"
            }
          },
          "dependencies": [
            "aws_eip.eip-NAT2",
            "aws_internet_gateway.InternetGateway",
            "aws_subnet.public-subnet-az2",
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:626205521754:network-acl/acl-03b14d9c03580a1e2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-03b14d9c03580a1e2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "626205521754",
            "subnet_ids": [],
            "tags": {
              "Name": "wordpress"
            },
            "tags_all": {
              "Name": "wordpress"
            },
            "vpc_id": "vpc-07f426f9f0ee673ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp_priv_route_table1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:626205521754:route-table/rtb-0e5db1b1263260f6b",
            "id": "rtb-0e5db1b1263260f6b",
            "owner_id": "626205521754",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f20e576ea2a5312b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress"
            },
            "tags_all": {
              "Name": "wordpress"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f426f9f0ee673ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-NAT1",
            "aws_internet_gateway.InternetGateway",
            "aws_nat_gateway.Nat-Az1",
            "aws_subnet.public-subnet-az1",
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp_priv_route_table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:626205521754:route-table/rtb-0eca8474b9db4ed97",
            "id": "rtb-0eca8474b9db4ed97",
            "owner_id": "626205521754",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-019fc79ad06f5a74b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress"
            },
            "tags_all": {
              "Name": "wordpress"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f426f9f0ee673ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-NAT2",
            "aws_internet_gateway.InternetGateway",
            "aws_nat_gateway.Nat-Az2",
            "aws_subnet.public-subnet-az2",
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp_pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:626205521754:route-table/rtb-010c429dd181abde3",
            "id": "rtb-010c429dd181abde3",
            "owner_id": "626205521754",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f949ab75e0e63d4f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress"
            },
            "tags_all": {
              "Name": "wordpress"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f426f9f0ee673ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.InternetGateway",
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e5fad4a3b79b861",
            "route_table_id": "rtb-010c429dd181abde3",
            "subnet_id": "subnet-0315a2896974323e2"
          },
          "dependencies": [
            "aws_internet_gateway.InternetGateway",
            "aws_route_table.wp_pub_route_table",
            "aws_subnet.public-subnet-az1",
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03de1f3cdf397a256",
            "route_table_id": "rtb-010c429dd181abde3",
            "subnet_id": "subnet-02a3da0f6544a9cb8"
          },
          "dependencies": [
            "aws_internet_gateway.InternetGateway",
            "aws_route_table.wp_pub_route_table",
            "aws_subnet.public-subnet-az2",
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e7c45909796a60a",
            "route_table_id": "rtb-0e5db1b1263260f6b",
            "subnet_id": "subnet-0c0eacb44b4401d1e"
          },
          "dependencies": [
            "aws_eip.eip-NAT1",
            "aws_internet_gateway.InternetGateway",
            "aws_nat_gateway.Nat-Az1",
            "aws_route_table.wp_priv_route_table1",
            "aws_subnet.app-subnet-az1",
            "aws_subnet.public-subnet-az1",
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0882492b5bdb72706",
            "route_table_id": "rtb-0eca8474b9db4ed97",
            "subnet_id": "subnet-025df943761c683c4"
          },
          "dependencies": [
            "aws_eip.eip-NAT2",
            "aws_internet_gateway.InternetGateway",
            "aws_nat_gateway.Nat-Az2",
            "aws_route_table.wp_priv_route_table2",
            "aws_subnet.app-subnet-az2",
            "aws_subnet.public-subnet-az2",
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03789e5a33b9302a7",
            "route_table_id": "rtb-0e5db1b1263260f6b",
            "subnet_id": "subnet-0da8794e4748b26a5"
          },
          "dependencies": [
            "aws_eip.eip-NAT1",
            "aws_internet_gateway.InternetGateway",
            "aws_nat_gateway.Nat-Az1",
            "aws_route_table.wp_priv_route_table1",
            "aws_subnet.data-subnet-az1",
            "aws_subnet.public-subnet-az1",
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "f",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00eca3f3137355835",
            "route_table_id": "rtb-0eca8474b9db4ed97",
            "subnet_id": "subnet-05a8deaf83bdcf574"
          },
          "dependencies": [
            "aws_eip.eip-NAT2",
            "aws_internet_gateway.InternetGateway",
            "aws_nat_gateway.Nat-Az2",
            "aws_route_table.wp_priv_route_table2",
            "aws_subnet.data-subnet-az2",
            "aws_subnet.public-subnet-az2",
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-guest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:626205521754:security-group/sg-0bd9c4f7b1e7666ea",
            "description": "for the bastion guest in this case the wordpress instance to Allows inbound traffic only from the bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd9c4f7b1e7666ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allowing ssh from the ip address of the bastion host",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "allowing ssh from the ip address of the bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01d743e72a9259070"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "allowing ssh from the ip address of the bastion host",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04aa93a555e4c025b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-ssh-bastion",
            "name_prefix": "",
            "owner_id": "626205521754",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh-bastion"
            },
            "tags_all": {
              "Name": "allow-ssh-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f426f9f0ee673ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-host",
            "aws_security_group.lb_sg",
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:626205521754:security-group/sg-01d743e72a9259070",
            "description": "for the bastion host, to be used on the ec instance which will serve as the bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d743e72a9259070",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "security group for bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG-bastion-Host",
            "name_prefix": "",
            "owner_id": "626205521754",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-bastion-Host"
            },
            "tags_all": {
              "Name": "SG-bastion-Host"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f426f9f0ee673ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:626205521754:security-group/sg-0d6b1dd5a7f6822df",
            "description": "Allows inbound efs traffic from ec2",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0bd9c4f7b1e7666ea"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6b1dd5a7f6822df",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd9c4f7b1e7666ea"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-sg",
            "name_prefix": "",
            "owner_id": "626205521754",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07f426f9f0ee673ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-guest",
            "aws_security_group.bastion-host",
            "aws_security_group.lb_sg",
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:626205521754:security-group/sg-04aa93a555e4c025b",
            "description": "for the application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04aa93a555e4c025b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "security group for bastion host",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-wordpress-lb-sg",
            "name_prefix": "",
            "owner_id": "626205521754",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07f426f9f0ee673ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:626205521754:subnet/subnet-0c0eacb44b4401d1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0eacb44b4401d1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626205521754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app subnet az1"
            },
            "tags_all": {
              "Name": "app subnet az1"
            },
            "vpc_id": "vpc-07f426f9f0ee673ad"
          },
          "dependencies": [
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:626205521754:subnet/subnet-025df943761c683c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025df943761c683c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626205521754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app subnet az2"
            },
            "tags_all": {
              "Name": "app subnet az2"
            },
            "vpc_id": "vpc-07f426f9f0ee673ad"
          },
          "dependencies": [
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data-subnet-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:626205521754:subnet/subnet-0da8794e4748b26a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da8794e4748b26a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626205521754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "data subnet az1"
            },
            "tags_all": {
              "Name": "data subnet az1"
            },
            "vpc_id": "vpc-07f426f9f0ee673ad"
          },
          "dependencies": [
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data-subnet-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:626205521754:subnet/subnet-05a8deaf83bdcf574",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a8deaf83bdcf574",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626205521754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "data subnet az2"
            },
            "tags_all": {
              "Name": "data subnet az2"
            },
            "vpc_id": "vpc-07f426f9f0ee673ad"
          },
          "dependencies": [
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:626205521754:subnet/subnet-0315a2896974323e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0315a2896974323e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "626205521754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet az1"
            },
            "tags_all": {
              "Name": "public subnet az1"
            },
            "vpc_id": "vpc-07f426f9f0ee673ad"
          },
          "dependencies": [
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:626205521754:subnet/subnet-02a3da0f6544a9cb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a3da0f6544a9cb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "626205521754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet az2"
            },
            "tags_all": {
              "Name": "public subnet az2"
            },
            "vpc_id": "vpc-07f426f9f0ee673ad"
          },
          "dependencies": [
            "aws_vpc.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:626205521754:vpc/vpc-07f426f9f0ee673ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01d670024b2767d15",
            "default_route_table_id": "rtb-081acfd7a726d52de",
            "default_security_group_id": "sg-0c9ba87d6c152ce89",
            "dhcp_options_id": "dopt-ec1d8b86",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07f426f9f0ee673ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-081acfd7a726d52de",
            "owner_id": "626205521754",
            "tags": {
              "Name": "wordpress"
            },
            "tags_all": {
              "Name": "wordpress"
            }
          }
        }
      ]
    }
  ]
}